User Controller
Include 401 as a response from authenticate method
